# qobuz-cli

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
qobuz_cli/: __init__.py  __main__.py  _version.py  exceptions.py
qobuz_cli/api/: __init__.py  auth.py  client.py  rate_limiter.py
qobuz_cli/cli/: __init__.py  app.py  formatters.py  progress_manager.py
qobuz_cli/core/: __init__.py  download_manager.py  track_processor.py
qobuz_cli/media/: __init__.py  downloader.py  integrity.py  lyrics.py  tagger.py
qobuz_cli/models/: __init__.py  config.py  stats.py
qobuz_cli/storage/: __init__.py  archive.py  cache.py  config_manager.py
qobuz_cli/utils/: __init__.py  batch_fetcher.py  circuit_breaker.py  config_validator.py  discography.py  formatting.py  path.py  playlist.py  structured_logger.py
qobuz_cli/web/: __init__.py  bundle_fetcher.py
scripts/: smoke_test.py
tests/: conftest.py  test_booklet.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_formatting.py  test_lyrics.py  test_path.py  test_replaygain.py
