[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qobuz-cli"
version = "0.1.0"
authors = [{ name = "HongYue1", email = "redacted@redacted.com" }]
description = "A fast, modern, and concurrent music downloader for Qobuz."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiofiles",
    "aiohttp",
    "beautifulsoup4",
    "mutagen",
    "pathvalidate",
    "pydantic",
    "rich",
    "typer",
]

[project.urls]
"Homepage" = "https://github.com/HongYue1/qobuz-cli"
"Bug Tracker" = "https://github.com/HongYue1/qobuz-cli/issues"

[project.scripts]
qobuz-cli = "qobuz_cli.__main__:main"
qcli = "qobuz_cli.__main__:main"

[tool.ruff]
# line-length = 88
target-version = "py39" # Ensures compatibility checks are for Python 3.9+

# [tool.ruff.lint]
# # A good starting set of rules.
# select = ["E", "F", "W", "I", "UP"]
