[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qobuz-cli"
version = "v0.0.1"
authors = [{ name = "HongYue1", email = "redacted@redacted.com" }]
description = " Blazing fast Qobuz CLI downloader with modern UI"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
keywords = ["qobuz", "music", "downloader", "cli", "audio"]

classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "aiofiles",
    "aiohttp",
    "beautifulsoup4",
    "mutagen",
    "pathvalidate",
    "pydantic",
    "rich",
    "typer",
]

[project.optional-dependencies]
dev = ["ruff>=0.10.0"]

[project.urls]
Homepage = "https://github.com/HongYue1/qobuz-cli"
Repository = "https://github.com/HongYue1/qobuz-cli"
"Bug Tracker" = "https://github.com/HongYue1/qobuz-cli/issues"

[project.scripts]
qobuz-cli = "qobuz_cli.__main__:main"
qcli = "qobuz_cli.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]

select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify 
    "PIE",   # flake8-pie
    "RUF",   # Ruff-specific rules
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
]

# ignore = [
#     "S101", # Allow assert statements
#     "S603", # Allow subprocess without shell=True check
#     "S607", # Allow partial executable paths
# ]

# Allow autofix for specific rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["qobuz_cli"]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Relax security rules in tests
# "tests/**" = ["S"]
